# goit-ds-hw-03

./: .env.example  .gitignore  pyproject.toml
src/: mongoDB_queries.py
src/scrapping/: main.py
