[project]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "experrt2",email = "experrt2@gmail.com "}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.13.1,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "goit_ds_hw_03", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
